# xcmocean

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: linting.yaml  python-publish.yml  test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
docs/: conf.py  docs.ipynb  index.rst  requirements.txt
docs/sphinxext/: matplotlib.sphinxext.plot_directive
tests/: test_xcmocean.py
xcmocean/: __init__.py  _version.py  accessor.py  options.py
