[metadata]
name = xcmocean
description = Opinionated xarray accessor for choosing colormaps
author = Kristen Thyng
url = https://github.com/kthyng/xcmocean
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE

[options]
zip_safe = False
install_requires =
    xarray
    cmocean

python_requires = >=3.6
packages = find:

# [sdist]
# formats = gztar

# [check-manifest]
# ignore =
#     *.yml
#     .coveragerc
#     docs
#     docs/*
#     *.enc
#     tests
#     tests/*

# [tool:pytest]
# markers =
#     web: marks tests require connection (deselect with '-m "not web"')
#     serial: marks tests that cannot be run in parallel (deselect with '-m "not serial"')
